--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -20,6 +20,7 @@
 	\acro{1D}{one-dimension}
 	\acro{2D}{two-dimensions}
 	\acro{3D}{three-dimensions}
+	\acro{HHG}{High Harmonic Generation}
 	\acro{ZVP}{Zero Vector Potential}
 \end{acronym}
 
