--- a/text/chx-misc.tex
+++ b/text/chx-misc.tex
@@ -164,3 +164,45 @@ Once I have finished this section I must redo boosted section since I have made 
 
 I must also at some point just state that a hat indicates a normalised vector.
 
+
+
+
+\subsection{Condition on validity of hole boring expression}
+Robinson \textit{et al} \cite{robinsonHoleboringRadiationPressure2009} consider for what case is the expression they derive for hole boring valid. The case they are interested in is what happens if the energy available for an ion to gain from crossing the pseudo-capacitor is less than the kinetic energy associated with the hole boring velocity. Their analysis applies for non-relativistic hole boring velocities and circular polarised laser pulses. This theory is now updated for the ZVP mechanism (linear polarised and relativistic ion velocities).
+
+The so-called `piston' which leads to ion hole boring is the pseudocapacitor field. In section \ref{sec:zvp_energies_derivation}, the development of that field is discussed quantitatively. The peak electric field is
+\begin{equation}
+	E_\mathrm{C} = E_\mathrm{L} = \sqrt{\frac{I}{\epsilon_0 c}}
+\end{equation}
+and the peak displacement of electrons is 
+\begin{equation}
+	\Delta x = \frac{\epsilon_0 E_\mathrm{C}}{en_\mathrm{e}.
+\end{equation}
+
+Considering instead the relativistic kinetic energy gained by an ion were it to fully cross the pseudocapacitor, following equation \ref{eq:zvp_T},
+\begin{equation}
+	T_i = Z_i \times \frac{1}{2}m_\mathrm{e}c^2 \frac{a^2_0}{\bar{n}_\mathrm{e}} = \frac{IZ_i}{2cn_mathrm{e}}.
+\end{equation}
+(The equation above needs more thinking about)
+
+Ions are reflected provided,
+\begin{equation}
+	T_i > \frac{1}{2}m_iv^2_\mathrm{HB}.
+\end{equation}
+
+Hmm ok so in Vincenti, they approximate electron mass as much less than ion mass and therefore neglect in the momentum calculation. It also looks like they have not done full relativistic calculation, so I cannot yet say I have that. But carrying on the derivation using Vincenti expression for simplicity:
+
+The hole-boring velocity as calculated by Vincenti \textit{et al} \cite{vincentiOpticalPropertiesRelativistic2014} is
+\begin{equation}
+	\frac{v_\mathrm{HB} }{c}= \sqrt{\frac{R\cos\theta}{2}
+\end{equation}
+
+So come back to this section, once I have fully written out the hole boring calcualtino in full, include also the multiple ion species stuff and this condition.
+
+The upshot of this condition is something like: require no low charge to mass ratio ions (ie v heavy ions) and fully ionisation, these conditions are satisfied in this area of study.
+
+To arrive at that result, useful parts include:
+composite mass density $\rho = \sum_i m_i n_i$, $m_i = A_i/N_\mathrm{A}$ and $A_i \approx 2Z_i$ for most low mass ions relevant in these plasmas.
+
+
+
