--- a/text/chx-misc.tex
+++ b/text/chx-misc.tex
@@ -176,7 +176,7 @@ The so-called `piston' which leads to ion hole boring is the pseudocapacitor fie
 \end{equation}
 and the peak displacement of electrons is 
 \begin{equation}
-	\Delta x = \frac{\epsilon_0 E_\mathrm{C}}{en_\mathrm{e}.
+	\Delta x = \frac{\epsilon_0 E_\mathrm{C}}{en_\mathrm{e}}.
 \end{equation}
 
 Considering instead the relativistic kinetic energy gained by an ion were it to fully cross the pseudocapacitor, following equation \ref{eq:zvp_T},
@@ -194,7 +194,7 @@ Hmm ok so in Vincenti, they approximate electron mass as much less than ion mass
 
 The hole-boring velocity as calculated by Vincenti \textit{et al} \cite{vincentiOpticalPropertiesRelativistic2014} is
 \begin{equation}
-	\frac{v_\mathrm{HB} }{c}= \sqrt{\frac{R\cos\theta}{2}
+	\frac{v_\mathrm{HB} }{c}= \sqrt{\frac{R\cos\theta}{2}}
 \end{equation}
 
 So come back to this section, once I have fully written out the hole boring calcualtino in full, include also the multiple ion species stuff and this condition.
