--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -371,12 +371,14 @@ Results are presented in figure \ref{fig:zvp3d}.
 \begin{figure}
 	\centering
 	\includegraphics[width=1\linewidth]{../figures/zvp_3D}
-	\caption{Simulation results from a 3D \ac{PIC} simulation of the \ac{ZVP} mechanism. a) The initialised electron number density. b) The electron number density several cycles later, the plasma bulk is intact, however there is evidence of instabilities and electron bunches propagating through and around the plasma. c) The electron kinetic energy density at the same timestep. Note that the scale has been clipped to enable observation of both electron bunches propagating through and around the plasma bulk. Significantly higher energy density, corresponding to a higher charge density and attosecond duration for the electron bunches propagating around the bulk. d-f) Plots clipped through $z=0$ for a-c) respectively for better clarity on the internal structure of the plasma bulk.}
+	\caption{Simulation results from a 3D \ac{PIC} simulation of the \ac{ZVP} mechanism. a) The initialised electron number density. b) The electron number density several cycles later, the plasma bulk is intact, however there is evidence of instabilities and electron bunches propagating through and around the plasma. c) The electron kinetic energy density at the same timestep. Note that the scale has been clipped to enable observation of both electron bunches propagating through and around the plasma bulk. Significantly higher energy density, corresponding to a higher charge density and attosecond duration for the electron bunches propagating around the bulk. d-f) Plots clipped through $z=0$ for a-c) respectively for better clarity on the internal structure of the plasma bulk. The accompanying plots for figures e) and f) are corresponding 2D PIC simulation results.}
 	\label{fig:zvp3d}
 \end{figure}
+I will finish this section once the results of the rest of the 3D sim stuff is done. One thing to remark:
 
+The remarkable similarity between the 2 and 3D simulation results is a natural consequence of the 2D nature of the interaction geometry. It is however still reassuring to note that previous work withstands this stringent test of the real universe. 
 
-Note that the bounds for the plots of KE dens have been chosen to enable observation of both hot electron bunches through centre and around sides (those to the sides have dramatically higher energy densities - related in part due to the maintenance of the as duraction.)
+(At some point list all the other sources of potential error, including ignoring ionisation, ionisation states, collisions.)
 
 Interesting result of the 3D sim: Can see bunch on front surface and laser clearly propagating behind it. Is this since in this new regime (ZVP dominating HHG) the thin bunch barely attenuates (ie reflects) the laser pulse when it is accelerating across the pseudo capacitor, hence the laser is still effectively able to compress the plasma surface and keep the process going. Meanwhile the reflected HHG light comes mostly from converting bunch KE into HHG.
 
@@ -395,9 +397,20 @@ The two simulations are compared in figure \ref{fig:zvp3dcomparelowres}. Good co
 
 Maybe mention somewhere that I would als add pseudocapacitor field as an essential characteristic of the ZVP mechanism that should generally be identified.
 
-\subsection{Typical ZVP electron bunch properties}
-Then section of a typical bunch properties 
-While much has been stated of the high energy and short duration of ZVP bunches in the previous work, the specific properties of such bunches has largely avoided interrogation.
+Following the success in reproducing the key features of the \ac{ZVP} mechanism and demonstrated consistency between 2 and 3D equivalent simulations, the remainder of this chapter will predominantly utilise 2D simulations to interrogate the mechanism further.
+\subsection{The ZVP electron bunch}
+ Although much has been stated of the high energy and short duration of ZVP electron bunches in the previous work, until now much of the quantitative discussion of the properties of such bunches has avoided interrogation. A ZVP electron bunch is an electron bunch produced via the ZVP mechanism. Once produced and accelerated across the pseudocapacitor field, it is launched back in the laser propagation direction. While the bunch has no spatial separation over energies when propagating with the zero of the vector potential, the turning point of the electrons is longitudinal momentum dependent due to the Coulomb attraction of the ions after overshooting the pseudocapacitor field. Baeva \textit{et al} showed that the electron bunch has a quasi-monoenergetic spectrum: there is a one-to-one relationship between energy and position with the higher energies trailing the lower energies. The full bunch is confined to 130 as while a single energy confined to 5 as. If, however, the plasma bulk is transversely mass-limited relative to the laser spot size, some of the electron bunch when it is rotated back towards the plasma block will overshoot and escape the potential well without significant stretching of the bunch in time. as can be seen in figure \ref{fig:zvp3d}. Such electron bunches (retain the initial energy spread???? ie fast first as disucssed in RES paper) retain their high charge density and ultra-short duration. So there are two types of ZVP electron bunch that can be created: ultra high charge ultra short duraction electron bunches from mass limited targets, of interest due to their unique properties and bulk propagating bunches, which have lower charge densities, are imprinted with instabilities and are instead of interest due to their connection to energy absorption and reflection in this post-ponderomotive regime.
+ 
+ To investigate these two bunch types further, 2D PIC simulations were performed, see appendix for parameters. Figure blah is reprentative.
+ 
+ \subsection{Attosecond nano-Coulomb electron bunches}
+
+NOw for properties. Would be good to look in more detail, see if actually is anything in quasimonoenergetic nature.
+SHould probs include density as well as KE.
+
+
+
+Those high energy ZVP electron bunches 
 
 \subsection{Parameter scan of electron bunch mean energy}
 
