--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -408,7 +408,17 @@ Following the success in reproducing the key features of the \ac{ZVP} mechanism 
 NOw for properties. Would be good to look in more detail, see if actually is anything in quasimonoenergetic nature.
 SHould probs include density as well as KE.
 
+\begin{equation}
+	x \sim \frac{\lambda a_0n_\mathrm{c}}{n_\mathrm{e}}
+\end{equation}
 
+\begin{equation}
+	T \sim \frac{a_0^2n_\mathrm{c}}{n_\mathrm{e}}
+\end{equation}
+
+\begin{equation}
+	U \sim \frac{a_0^3n_\mathrm{c}}{n_\mathrm{e}}
+\end{equation}
 
 Those high energy ZVP electron bunches 
 
